--- a/index.html
+++ b/index.html
@@ -85,11 +85,12 @@
       <nav class="nav">
         <ul>
           <li><a href="index.html" class="active">ホーム</a></li>
-          <li><a href="#news">お知らせ</a></li>
-          <li><a href="#schedule">スケジュール</a></li>
-          <li><a href="#about">チーム紹介</a></li>
-          <li><a href="#join">入会案内</a></li>
-          <li><a href="#contact">お問い合わせ</a></li>
+          <li><a href="news.html">お知らせ</a></li>
+          <li><a href="gallery.html">ギャラリー</a></li>
+          <li><a href="index.html#schedule">スケジュール</a></li>
+          <li><a href="index.html#about">チーム紹介</a></li>
+          <li><a href="index.html#join">入会案内</a></li>
+          <li><a href="index.html#contact">お問い合わせ</a></li>
         </ul>
       </nav>
       <div class="header-tel">
@@ -235,10 +236,10 @@
         <div class="footer-nav">
           <ul>
             <li><a href="index.html">ホーム</a></li>
-            <li><a href="#news">お知らせ</a></li>
-            <li><a href="#schedule">スケジュール</a></li>
-            <li><a href="#about">チーム紹介</a></li>
-            <li><a href="#join">入会案内</a></li>
+            <li><a href="news.html">お知らせ</a></li>
+            <li><a href="gallery.html">ギャラリー</a></li>
+            <li><a href="index.html#schedule">スケジュール</a></li>
+            <li><a href="index.html#join">入会案内</a></li>
           </ul>
         </div>
       </div>
