マルチページ対応: ナビゲーション更新

--- a/news.html
+++ b/news.html
@@ -46,6 +46,7 @@
         <ul>
           <li><a href="index.html">ホーム</a></li>
           <li><a href="news.html" class="active">お知らせ</a></li>
+          <li><a href="gallery.html">ギャラリー</a></li>
           <li><a href="index.html#schedule">スケジュール</a></li>
           <li><a href="index.html#about">チーム紹介</a></li>
           <li><a href="index.html#join">入会案内</a></li>
@@ -101,8 +102,8 @@
           <ul>
             <li><a href="index.html">ホーム</a></li>
             <li><a href="news.html">お知らせ</a></li>
+            <li><a href="gallery.html">ギャラリー</a></li>
             <li><a href="index.html#schedule">スケジュール</a></li>
-            <li><a href="index.html#about">チーム紹介</a></li>
             <li><a href="index.html#join">入会案内</a></li>
           </ul>
         </div>
