テンプレート構造統一

--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
     </div>
   </section>
 
+  <!-- ギャラリー -->
+  <section class="gallery-preview-section" id="gallery">
+    <div class="container">
+      <p class="section-title-en reveal">Gallery</p>
+      <h2 class="section-title reveal">活動ギャラリー</h2>
+      <p class="section-desc reveal">大会や練習の様子をお伝えします。</p>
+      <div class="gallery-grid" id="gallery-preview">
+        <!-- JS で動的に挿入（3件プレビュー） -->
+      </div>
+      <div class="section-more reveal">
+        <a href="gallery.html" class="btn-outline">ギャラリーを見る</a>
+      </div>
+    </div>
+  </section>
+
   <!-- Schedule -->
   <section class="schedule-section" id="schedule">
     <div class="container">
@@ -253,6 +268,7 @@
   </div>
 
   <script src="js/news-store.js" defer></script>
+  <script src="js/gallery-store.js" defer></script>
   <script src="js/schedule-store.js" defer></script>
   <script src="js/main.js" defer></script>
 </body>
